load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cds",
    srcs = ["cds.go"],
    importpath = "github.com/jrockway/monorepo/ekglue/pkg/cds",
    visibility = ["//visibility:public"],
    deps = [
        "//ekglue/pkg/xds",
        "@com_github_envoyproxy_go_control_plane//envoy/config/cluster/v3:cluster",
        "@com_github_envoyproxy_go_control_plane//envoy/config/endpoint/v3:endpoint",
        "@com_github_envoyproxy_go_control_plane//envoy/service/cluster/v3:cluster",
        "@com_github_envoyproxy_go_control_plane//envoy/service/endpoint/v3:endpoint",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
    ],
)

go_test(
    name = "cds_test",
    srcs = ["cds_test.go"],
    embed = [":cds"],
    deps = [
        "//ekglue/pkg/cds/internal/fakexds",
        "//ekglue/pkg/xds",
        "@com_github_envoyproxy_go_control_plane//envoy/config/cluster/v3:cluster",
        "@com_github_envoyproxy_go_control_plane//envoy/config/core/v3:core",
        "@com_github_envoyproxy_go_control_plane//envoy/service/discovery/v3:discovery",
        "@com_github_grpc_ecosystem_go_grpc_middleware//logging/zap/ctxzap",
        "@org_golang_google_genproto_googleapis_rpc//status",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zaptest",
    ],
)
