load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "glue",
    srcs = ["glue.go"],
    importpath = "github.com/jrockway/monorepo/ekglue/pkg/glue",
    visibility = ["//visibility:public"],
    deps = [
        "//ekglue/pkg/cds",
        "@com_github_envoyproxy_go_control_plane//envoy/config/cluster/v3:cluster",
        "@com_github_envoyproxy_go_control_plane//envoy/config/core/v3:core",
        "@com_github_envoyproxy_go_control_plane//envoy/config/endpoint/v3:endpoint",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/transport_sockets/tls/v3:tls",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/upstreams/http/v3:http",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_opentracing_opentracing_go//ext",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_api//discovery/v1:discovery",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_client_go//tools/cache",
        "@io_k8s_sigs_yaml//:yaml",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_x_exp//maps",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "glue_test",
    srcs = ["glue_test.go"],
    data = glob(["testdata/**"]),
    embed = [":glue"],
    deps = [
        "//ekglue/pkg/cds",
        "@com_github_envoyproxy_go_control_plane//envoy/config/cluster/v3:cluster",
        "@com_github_envoyproxy_go_control_plane//envoy/config/core/v3:core",
        "@com_github_envoyproxy_go_control_plane//envoy/config/endpoint/v3:endpoint",
        "@com_github_envoyproxy_go_control_plane//envoy/type/v3:type",
        "@com_github_google_go_cmp//cmp",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_api//discovery/v1:discovery",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_client_go//tools/cache",
        "@io_k8s_sigs_yaml//:yaml",
        "@org_golang_google_protobuf//testing/protocmp",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)
